Whitespace fixes

--- a/src/widgets/Slider.css
+++ b/src/widgets/Slider.css
@@ -1,11 +1,18 @@
 /* Slider Widget */
 
 .Ldt-Slider {
-    border: none; border-radius: 0; padding: 0; margin: 0; background: #B6B8B8;
+    border: none;
+    border-radius: 0;
+    padding: 0;
+    margin: 0;
+    background: #B6B8B8;
 }
 
 .Ldt-Slider .ui-slider-handle {
-    border-radius: 8px; top: -2px; background: #fc00ff; border: 1px solid #ffffff;
+    border-radius: 8px;
+    top: -2px;
+    background: #fc00ff;
+    border: 1px solid #ffffff;
 }
 
 .Ldt-Slider .ui-slider-range {
@@ -13,7 +20,19 @@
 }
 
 .Ldt-Slider-Time {
-    position: absolute; top: -16px; background: #ffffc0; color: #000000; border-radius: 3px; z-index: 8;
-    font-size: 10px; width: 34px; border: 1px solid #999999; padding: 1px; margin-left: -20px;
-    display: none; text-align: center; font-weight: bold; pointer-events: none;
+    position: absolute;
+    top: -16px;
+    background: #ffffc0;
+    color: #000000;
+    border-radius: 3px;
+    z-index: 8;
+    font-size: 10px;
+    width: 34px;
+    border: 1px solid #999999;
+    padding: 1px;
+    margin-left: -20px;
+    display: none;
+    text-align: center;
+    font-weight: bold;
+    pointer-events: none;
 }
